use jlinktask assertSuccess